--- a/docs/feapder_platform/爬虫管理系统.md
+++ b/docs/feapder_platform/爬虫管理系统.md
@@ -99,7 +99,14 @@ yum remove docker  docker-common docker-selinux docker-engine
 ```shell
 yum install -y yum-utils device-mapper-persistent-data lvm2 && python2 /usr/bin/yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo && yum install docker-ce -y
 ```
-
+国内用户推荐使用阿里云的镜像
+```shell
+yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
+```
+完整的命令如下
+```shell
+yum install -y yum-utils device-mapper-persistent-data lvm2 && python2 /usr/bin/yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo && yum install docker-ce -y
+```
 启动
 ```shell
 systemctl enable docker
